# endocore

./: .gitattributes  .gitignore  CHANGELOG.md  EndoCore_TZ.md  HOSTING.md  README.md  RELEASE.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: bench.py
demos/booking/: README.md  hooks.py  settings.py
demos/booking/Api/v1/Bookings/: Get.py  Post.py
demos/booking/Api/v1/Rooms/: Get.py  Post.py
demos/booking/Models/: core.py
demos/booking/Services/: booking.py
demos/booking/Tests/: conftest.py  test_flow.py  test_race.py
demos/shop/: README.md  settings.py
demos/shop/Api/v1/Buy/: Post.py
demos/shop/Middleware/: __init__.py
demos/shop/Models/: core.py
demos/shop/Services/: shop.py
demos/shop/Tests/: conftest.py  test_flow.py  test_idempotency.py  test_race.py
demos/teamboard/: README.md  settings.py
demos/teamboard/Middleware/: __init__.py
demos/teamboard/Models/: core.py
demos/teamboard/Services/: boards.py  live.py
demos/teamboard/Tests/: conftest.py  test_api.py  test_live.py
docs/: benchmarks.md  benchmarks.ru.md  changelog.md  changelog.ru.md  cli.md  cli.ru.md  comparison.md  comparison.ru.md  contributing.md  contributing.ru.md  cookbook.md  cookbook.ru.md  deployment.md  deployment.ru.md  examples.md  examples.ru.md  index.md  index.ru.md  reference.md  reference.ru.md
docs/extensions/: celery.md  celery.ru.md  email.md  email.ru.md  index.md  index.ru.md  redis.md  redis.ru.md
docs/getting-started/: installation.md  installation.ru.md  philosophy.md  philosophy.ru.md  quickstart.md  quickstart.ru.md  tutorial.md  tutorial.ru.md
docs/guide/: architecture.md  architecture.ru.md  background-lifecycle.md  background-lifecycle.ru.md  cache.md  cache.ru.md  configuration.md  configuration.ru.md  dependency-injection.md  dependency-injection.ru.md  exceptions.md  exceptions.ru.md  logging.md  logging.ru.md  middleware.md  middleware.ru.md  request-response.md  request-response.ru.md  routing.md  routing.ru.md  security.md  security.ru.md  versioning.md  versioning.ru.md  websockets.md  websockets.ru.md
docs/javascripts/: lang-redirect.js
docs/orm/: async.md  async.ru.md  fields.md  fields.ru.md  files.md  files.ru.md  index.md  index.ru.md  migrations.md  migrations.ru.md  models.md  models.ru.md  queries.md  queries.ru.md  relations.md  relations.ru.md  transactions.md  transactions.ru.md
docs/stylesheets/: extra.css
endocore/: __init__.py  __main__.py  asgi.py
endocore/cli/: __init__.py  main.py  templates.py
endocore/cli/commands/: __init__.py  check.py  create.py  dev.py  doctor.py  migrate.py  new.py  openapi.py  routes.py  test.py  version.py
endocore/core/: __init__.py  application.py  auth.py  cache.py  config.py  datastructures.py  di.py  discovery.py  exceptions.py  loader.py  logging.py  middleware.py  openapi.py  passwords.py  pubsub.py  registry.py  request.py  response.py  router.py  signing.py  websocket.py
endocore/extensions/: __init__.py  cache_ext.py  celery.py  email.py  redis.py
endocore/middleware/: __init__.py  cors.py  csrf.py  gzip.py  ip_allowlist.py  logging.py  proxy.py  ratelimit.py  security.py  sessions.py  timeout.py
endocore/orm/: __init__.py  compiler.py  connection.py  exceptions.py  expressions.py  fields.py  manager.py  migrations.py  model.py  query.py  schema.py  storage.py  validators.py
endocore/orm/backends/: __init__.py  base.py  postgres.py  sqlite.py
example/: extensions.py
example/Api/v1/Chat/: Socket.py
example/Api/v1/Post/: Get.py  Post.py
example/Middleware/: __init__.py  auth.py  request_id.py
example/Models/: blog.py  role.py  user.py
example/Services/: auth_service.py  permissions_service.py
example/Tests/user/role/: test_create_role.py
example/Utils/: hash.py  validator.py
scripts/: README.md  discord_setup.py
tests/: conftest.py  test_application.py  test_application_e2e.py  test_asgi.py  test_auth.py  test_cache.py  test_cli.py  test_config.py  test_datastructures_bulk.py  test_default_version.py  test_di.py  test_discovery.py  test_dispatch_threading.py  test_exceptions.py  test_extensions.py  test_logging.py  test_masking_bulk.py  test_middleware_bundle.py  test_openapi.py  test_pubsub.py  test_pubsub_redis_live.py  test_pydantic_di.py  test_ratelimit_redis_live.py  test_registry.py  test_request_bulk.py  test_response_bulk.py  test_router_matrix.py  test_signing_bulk.py  test_streaming.py  test_websocket.py
tests/orm/: test_async.py  test_compiler_dialects.py  test_compiler_matrix.py  test_expressions.py  test_fields.py  test_files.py  test_files_bulk.py  test_lookups_matrix.py  test_migrations.py  test_migrations_alter.py  test_migrations_max.py  test_orm_max.py  test_orm_sqlite.py  test_postgres_pool.py  test_query_extra.py  test_query_methods.py  test_relations.py  test_relations_matrix.py  test_roundtrip_bulk.py  test_security.py  test_tx_isolation.py  test_uuid_pk.py
(+29 files in other folders)
