[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "endocore"
version = "0.4.0b1"
description = "File-based ASGI backend framework (folder tree = API) with a secure ORM, DI, and batteries-included middleware."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel" }]
keywords = ["asgi", "framework", "file-based-routing", "web"]

# The whole idea (tree magic, resolver, loader, Request/Response, CLI) is written
# from stdlib. The only thing taken from outside is the HTTP transport.
dependencies = ["uvicorn>=0.29"]

[project.optional-dependencies]
# ORM: SQLite works out of the box (stdlib). PostgreSQL needs the psycopg driver.
postgres = ["psycopg[binary]>=3.1"]
# Encrypted FileField storage needs a real, vetted AEAD implementation.
files = ["cryptography>=41"]
# In-process dev watcher.
watch = ["watchfiles>=0.21"]
dev = ["watchfiles>=0.21", "pytest>=8", "psycopg[binary]>=3.1", "cryptography>=41"]

[project.scripts]
end = "endocore.cli.main:main"

[tool.setuptools.packages.find]
include = ["endocore*"]

[tool.pytest.ini_options]
# The framework's own test suite. The example app's tests are run separately
# from inside example/ via `end test` (they import the app's Api/ tree).
testpaths = ["tests"]
