[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "endocore"
version = "0.7.0b2"
description = "File-based ASGI backend framework (folder tree = API) with an async-capable secure ORM, DI, WebSockets + pub/sub, cache, OpenAPI, migrations, and service integrations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Drakulyonok" }]
keywords = ["asgi", "framework", "file-based-routing", "web", "orm", "websockets", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

# The whole idea (tree magic, resolver, loader, Request/Response, CLI) is written
# from stdlib. The only thing taken from outside is the HTTP transport.
dependencies = ["uvicorn>=0.29"]

[project.optional-dependencies]
# ORM: SQLite works out of the box (stdlib). PostgreSQL needs the psycopg driver.
postgres = ["psycopg[binary]>=3.1"]
# Encrypted FileField storage needs a real, vetted AEAD implementation.
files = ["cryptography>=41"]
# In-process dev watcher.
watch = ["watchfiles>=0.21"]
# Service integrations.
redis = ["redis>=5"]
celery = ["celery>=5"]
# Typed request bodies + richer OpenAPI schemas.
pydantic = ["pydantic>=2"]
dev = ["watchfiles>=0.21", "pytest>=8", "psycopg[binary]>=3.1", "cryptography>=41"]

[project.scripts]
# `end` is a reserved keyword in PowerShell (begin/process/end blocks), so a
# bare `end dev` is a parser error there. `endo` is the alias that works in
# every shell; `end` stays for bash/cmd/zsh users.
end = "endocore.cli.main:main"
endo = "endocore.cli.main:main"

[project.urls]
Homepage = "https://github.com/Drakulyonok/endocore"
Documentation = "https://endocore.readthedocs.io"
Repository = "https://github.com/Drakulyonok/endocore"
Changelog = "https://github.com/Drakulyonok/endocore/blob/main/CHANGELOG.md"
Issues = "https://github.com/Drakulyonok/endocore/issues"
Chat = "https://discord.gg/jwvGj2M9EX"

[tool.setuptools.packages.find]
include = ["endocore*"]

[tool.setuptools.package-data]
endocore = ["py.typed"]

[tool.pytest.ini_options]
# The framework's own test suite. The example app's tests are run separately
# from inside example/ via `end test` (they import the app's Api/ tree).
testpaths = ["tests"]
